@@ -13,6 +13,7 @@ import org.mockito.MockitoAnnotations;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -190,75 +191,98 @@ class CouponServiceImplTest {
         verifyNoInteractions(couponRepository);
     }
 
-
-    @Test
-    void testAssignCoupon_Success() {
-        // Given
-        CouponPolicy couponPolicy = new CouponPolicy(1L, "Policy 1", 1000L,
-                10000L, BigDecimal.ZERO, 500L, 30);
-
-        Coupon coupon = new Coupon();
-        coupon.setTestId(1L);
-        coupon.setCouponPolicy(couponPolicy);
-        coupon.setName("Test Coupon");
-
-        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
-        when(couponRepository.save(any(Coupon.class))).thenReturn(coupon);
-
-        CouponAssignRequestDTO request = new CouponAssignRequestDTO(1L, 100L);
-
-        // When
-        CouponAssignResponseDTO response = couponService.assignCoupon(request);
-
-        // Then
-        assertNotNull(response);
-        assertEquals(1L, response.getCouponId());
-        assertEquals("Test Coupon", response.getName());
-        assertEquals(100L, response.getMemberId());
-        assertNotNull(response.getCouponIssueDate());
-        assertEquals(CouponStatus.NOTUSED.name(), response.getCouponStatus());
-        verify(couponRepository, times(1)).findById(1L);
-        verify(couponRepository, times(1)).save(any(Coupon.class));
-    }
-
-    @Test
-    void testAssignCoupon_CouponNotFound() {
-        // Given
-        when(couponRepository.findById(1L)).thenReturn(Optional.empty());
-
-        CouponAssignRequestDTO request = new CouponAssignRequestDTO(1L, 100L);
-
-        // Then
-        assertThrows(CouponNotFoundException.class, () -> couponService.assignCoupon(request));
-        verify(couponRepository, times(1)).findById(1L);
-        verify(couponRepository, never()).save(any(Coupon.class));
-    }
+//
+//    @Test
+//    void testAssignCoupon_Success() {
+//        // Given
+//        CouponPolicy couponPolicy = new CouponPolicy(1L, "Test Policy", 1000L,
+//                10000L, BigDecimal.ZERO, 500L, 30);
+//
+//
+//        Coupon coupon = new Coupon();
+//        coupon.setTestId(1L);
+//        coupon.setCouponStatus(CouponStatus.NOTUSED);
+//        coupon.setCouponPolicy(couponPolicy);
+//
+//        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+//
+//        // When
+//        CouponAssignResponseDTO response = couponService.assignCoupon(new CouponAssignRequestDTO(1L, 123L));
+//
+//        // Then
+//        assertEquals(1L, response.getCouponId());
+//        assertEquals(123L, response.getMemberId());
+//        assertEquals(CouponStatus.NOTUSED, coupon.getCouponStatus());
+//        verify(couponRepository, times(1)).findById(1L);
+//    }
+//
+//    @Test
+//    void testAssignCoupon_CouponNotFound() {
+//        // Given
+//        when(couponRepository.findById(1L)).thenReturn(Optional.empty());
+//
+//        CouponAssignRequestDTO request = new CouponAssignRequestDTO(1L, 100L);
+//
+//        // Then
+//        assertThrows(CouponNotFoundException.class, () -> couponService.assignCoupon(request));
+//        verify(couponRepository, times(1)).findById(1L);
+//        verify(couponRepository, never()).save(any(Coupon.class));
+//    }
+//
+//    @Test
+//    void testAssignCoupon_AlreadyAssigned() {
+//        // Given
+//        Coupon coupon = new Coupon();
+//        coupon.setTestId(1L);
+//        coupon.setMemberId(123L);
+//
+//        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+//
+//        // When & Then
+//        CouponAssignRequestDTO request = new CouponAssignRequestDTO(1L, 456L);
+//        assertThrows(CouponAlreadyAssignedException.class, () -> couponService.assignCoupon(request));
+//        verify(couponRepository, times(1)).findById(1L);
+//        verifyNoMoreInteractions(couponRepository);
+//    }
 
     @Test
     void testUseCoupon_Success() {
         // Given
-        CouponPolicy couponPolicy = new CouponPolicy(1L, "Policy 1", 1000L,
+        CouponPolicy couponPolicy = new CouponPolicy(1L, "Test Policy", 1000L,
                 10000L, BigDecimal.ZERO, 500L, 30);
+
 
         Coupon coupon = new Coupon();
         coupon.setTestId(1L);
-        coupon.setCouponPolicy(couponPolicy);
-        coupon.setName("Test Coupon");
+        coupon.setMemberId(123L);
         coupon.setCouponStatus(CouponStatus.NOTUSED);
+        coupon.setCouponPolicy(couponPolicy);
+        coupon.setMemberId(1L);
 
         when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
-        when(couponRepository.save(any(Coupon.class))).thenReturn(coupon);
 
         // When
-        CouponUseResponseDTO response = couponService.useCoupon(1L);
+        couponService.useCoupon(1L,1L);
 
         // Then
-        assertNotNull(response);
-        assertEquals(1L, response.getCouponId());
-        assertEquals(CouponStatus.USED.name(), response.getCouponStatus());
-        assertNotNull(response.getCouponUseAt());
+        assertEquals(CouponStatus.USED, coupon.getCouponStatus());
         verify(couponRepository, times(1)).findById(1L);
-        verify(couponRepository, times(1)).save(any(Coupon.class));
+    }
+
+    @Test
+    void testUseCoupon_AlreadyUsed() {
+        // Given
+        Coupon coupon = new Coupon();
+        coupon.setTestId(1L);
+        coupon.setMemberId(123L);
+        coupon.setCouponStatus(CouponStatus.USED);
+        coupon.setMemberId(1L);
+
+        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+
+        // When & Then
+        assertThrows(CouponAlreadyUsedExceeption.class, () -> couponService.useCoupon(1L,1L));
+        verify(couponRepository, times(1)).findById(1L);
     }
 
     @Test
@@ -267,9 +291,131 @@ class CouponServiceImplTest {
         when(couponRepository.findById(1L)).thenReturn(Optional.empty());
 
         // Then
-        assertThrows(CouponNotFoundException.class, () -> couponService.useCoupon(1L));
+        assertThrows(CouponNotFoundException.class, () -> couponService.useCoupon(1L,1L));
         verify(couponRepository, times(1)).findById(1L);
         verify(couponRepository, never()).save(any(Coupon.class));
+    }
+
+    @Test
+    void testUseCoupon_NotAssigned() {
+        // Given
+        Coupon coupon = new Coupon();
+        coupon.setTestId(1L);
+        coupon.setMemberId(null);
+
+        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+
+        // When & Then
+        assertThrows(CouponNotAssignedException.class, () -> couponService.useCoupon(1L,1L));
+        verify(couponRepository, times(1)).findById(1L);
+    }
+
+    @Test
+    void testUseBookCoupon_Success() {
+        // Given
+        Book book = new Book();
+        book.setTestId(1L);
+        book.setTitle("Test Book");
+
+        CouponPolicy policy = new CouponPolicy(1L, "Test Policy", 1000L,
+                10000L, BigDecimal.ZERO, 500L, 30);
+
+        Coupon coupon = new Coupon();
+        coupon.setTestId(1L);
+        coupon.setMemberId(123L);
+        coupon.setCouponStatus(CouponStatus.NOTUSED);
+        coupon.setCouponPolicy(policy);
+        coupon.setMemberId(1L);
+
+        BookCoupon bookCoupon = new BookCoupon();
+        bookCoupon.setTestId(1L);
+        bookCoupon.setCoupon(coupon);
+        bookCoupon.setBook(book);
+
+        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+        when(bookCouponRepository.findByCoupon(coupon)).thenReturn(Optional.of(bookCoupon));
+
+        // When
+        couponService.useBookCoupon(1L, 1L, 1L);
+
+        // Then
+        assertEquals(CouponStatus.USED, coupon.getCouponStatus());
+    }
+
+    @Test
+    void testUseBookCoupon_InvalidBook() {
+        // Given
+        Book book = new Book();
+        book.setTestId(1L);
+
+        Coupon coupon = new Coupon();
+        coupon.setTestId(1L);
+        coupon.setMemberId(1L);
+
+        BookCoupon bookCoupon = new BookCoupon();
+        bookCoupon.setCoupon(coupon);
+        bookCoupon.setBook(book);
+
+        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+        when(bookCouponRepository.findByCoupon(coupon)).thenReturn(Optional.of(bookCoupon));
+
+        // When & Then
+        assertThrows(InvalidCouponUsageException.class, () -> couponService.useBookCoupon(1L,1L, 2L));
+    }
+
+    @Test
+    void testUseCategoryCoupon_Success() {
+        // Given
+        Category category = new Category();
+        category.setTestId(1L);
+        category.setName("Test Category");
+
+        CouponPolicy policy = new CouponPolicy(1L, "Test Policy", 1000L,
+                10000L, BigDecimal.ZERO, 500L, 30);
+
+        Coupon coupon = new Coupon();
+        coupon.setTestId(1L);
+        coupon.setMemberId(123L);
+        coupon.setCouponStatus(CouponStatus.NOTUSED);
+        coupon.setCouponPolicy(policy);
+        coupon.setMemberId(1L);
+
+        CategoryCoupon categoryCoupon = new CategoryCoupon();
+        categoryCoupon.setTestId(1L);
+        categoryCoupon.setCategory(category);
+        categoryCoupon.setCoupon(coupon);
+
+        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+        when(categoryCouponRepository.findByCoupon(coupon)).thenReturn(Optional.of(categoryCoupon));
+        when(categoryRepository.findSubcategories(1L)).thenReturn(List.of(1L, 2L, 3L));
+
+        // When
+        couponService.useCategoryCoupon(1L,1L, 1L);
+
+        // Then
+        assertEquals(CouponStatus.USED, coupon.getCouponStatus());
+    }
+
+    @Test
+    void testUseCategoryCoupon_InvalidCategory() {
+        // Given
+        Category category = new Category();
+        category.setTestId(1L);
+
+        Coupon coupon = new Coupon();
+        coupon.setTestId(1L);
+        coupon.setMemberId(1L);
+
+        CategoryCoupon categoryCoupon = new CategoryCoupon();
+        categoryCoupon.setCategory(category);
+        categoryCoupon.setCoupon(coupon);
+
+        when(couponRepository.findById(1L)).thenReturn(Optional.of(coupon));
+        when(categoryCouponRepository.findByCoupon(coupon)).thenReturn(Optional.of(categoryCoupon));
+        when(categoryRepository.findSubcategories(1L)).thenReturn(List.of(2L, 3L));
+
+        // When & Then
+        assertThrows(InvalidCouponUsageException.class, () -> couponService.useCategoryCoupon(1L,1L, 4L));
     }
 
     @Test
@@ -285,7 +431,7 @@ class CouponServiceImplTest {
         coupon2.setCouponStatus(CouponStatus.NOTUSED);
         coupon2.setCouponExpiryDate(LocalDate.now().minusDays(2));
 
-        List<Coupon> expiredCoupons = Arrays.asList(coupon1, coupon2);
+        List<Coupon> expiredCoupons = List.of(coupon1, coupon2);
 
         when(couponRepository.findByCouponStatusAndCouponExpiryDateBefore(CouponStatus.NOTUSED, LocalDate.now()))
                 .thenReturn(expiredCoupons);
@@ -298,20 +444,46 @@ class CouponServiceImplTest {
         assertEquals(CouponStatus.EXPIRED, coupon2.getCouponStatus());
         verify(couponRepository, times(1))
                 .findByCouponStatusAndCouponExpiryDateBefore(CouponStatus.NOTUSED, LocalDate.now());
-        verify(couponRepository, times(2)).save(any(Coupon.class));
     }
 
     @Test
     void testDeleteCoupon_Success() {
         // Given
-        when(couponRepository.existsById(1L)).thenReturn(true);
+        long couponId = 1L;
+
+        Coupon coupon = new Coupon();
+        coupon.setTestId(couponId);
+        coupon.setMemberId(null);
+
+        when(couponRepository.existsById(couponId)).thenReturn(true);
+        when(couponRepository.getReferenceById(couponId)).thenReturn(coupon);
 
         // When
-        couponService.deleteCoupon(1L);
+        couponService.deleteCoupon(couponId);
 
         // Then
-        verify(couponRepository, times(1)).existsById(1L);
-        verify(couponRepository, times(1)).deleteById(1L);
+        verify(couponRepository, times(1)).existsById(couponId);
+        verify(couponRepository, times(1)).getReferenceById(couponId);
+        verify(couponRepository, times(1)).deleteById(couponId);
+    }
+
+    @Test
+    void testDeleteCoupon_AlreadyAssigned() {
+        // Given
+        long couponId = 1L;
+
+        Coupon coupon = new Coupon();
+        coupon.setTestId(couponId);
+        coupon.setMemberId(123L);
+
+        when(couponRepository.existsById(couponId)).thenReturn(true);
+        when(couponRepository.getReferenceById(couponId)).thenReturn(coupon);
+
+        // When & Then
+        assertThrows(CouponAlreadyAssignedException.class, () -> couponService.deleteCoupon(couponId));
+        verify(couponRepository, times(1)).existsById(couponId);
+        verify(couponRepository, times(1)).getReferenceById(couponId);
+        verify(couponRepository, never()).deleteById(anyLong());
     }
 
     @Test
@@ -364,6 +536,11 @@ class CouponServiceImplTest {
         verify(couponRepository, times(1)).findByMemberId(100L);
     }
 
+    @Test
+    void testGetAllCouponsByMemberId_NotFound() {
+        when(couponRepository.findByMemberId(100L)).thenReturn(Collections.emptyList());
+        assertThrows(CouponsNotFoundException.class, () -> couponService.getAllCouponsByMemberId(100L));
+    }
 
     @Test
     void testGetUnusedCouponsByMemberId() {
@@ -387,53 +564,89 @@ class CouponServiceImplTest {
         // Then
         assertNotNull(coupons);
         assertEquals(1, coupons.size());
-        assertEquals("Unused Coupon", coupons.get(0).getName());
-        assertEquals("Policy 1", coupons.get(0).getPolicyName());
+        assertEquals("Unused Coupon", coupons.getFirst().getName());
+        assertEquals("Policy 1", coupons.getFirst().getPolicyName());
         verify(couponRepository, times(1)).findByMemberIdAndCouponStatus(100L, CouponStatus.NOTUSED);
     }
 
     @Test
-    void testGetCouponsByPolicyId() {
+    void testGetUnusedCouponsByMemberId_NotFound() {
+        when(couponRepository.findByMemberId(100L)).thenReturn(Collections.emptyList());
+        assertThrows(CouponsNotFoundException.class, () -> couponService.getUnusedCouponsByMemberId(100L));
+    }
+
+    @Test
+    void testGetUsedCouponsByMemberId() {
         // Given
-        CouponPolicy couponPolicy = new CouponPolicy(1L, "Test Policy", 1000L,
+        CouponPolicy couponPolicy = new CouponPolicy(1L, "Policy 1", 1000L,
                 10000L, BigDecimal.ZERO, 500L, 30);
 
         Coupon coupon1 = new Coupon();
         coupon1.setTestId(1L);
-        coupon1.setName("Policy Coupon 1");
+        coupon1.setName("Used Coupon");
+        coupon1.setMemberId(100L);
         coupon1.setCouponPolicy(couponPolicy);
-        coupon1.setCouponStatus(CouponStatus.NOTUSED);
+        coupon1.setCouponStatus(CouponStatus.USED);
 
-        Coupon coupon2 = new Coupon();
-        coupon2.setTestId(2L);
-        coupon2.setName("Policy Coupon 2");
-        coupon2.setCouponPolicy(couponPolicy);
-        coupon2.setCouponStatus(CouponStatus.USED);
-
-        when(couponRepository.findByCouponPolicyId(1L)).thenReturn(List.of(coupon1, coupon2));
+        when(couponRepository.findByMemberIdAndCouponStatus(100L, CouponStatus.USED))
+                .thenReturn(List.of(coupon1));
 
         // When
-        List<CouponDetailsDTO> coupons = couponService.getCouponsByPolicyId(1L);
+        List<CouponDetailsDTO> coupons = couponService.getUsedCouponsByMemberId(100L);
 
         // Then
         assertNotNull(coupons);
-        assertEquals(2, coupons.size());
-
-        // Verify first coupon
-        CouponDetailsDTO firstCoupon = coupons.get(0);
-        assertEquals(1L, firstCoupon.getId());
-        assertEquals("Policy Coupon 1", firstCoupon.getName());
-        assertEquals("Test Policy", firstCoupon.getPolicyName());
-
-        // Verify second coupon
-        CouponDetailsDTO secondCoupon = coupons.get(1);
-        assertEquals(2L, secondCoupon.getId());
-        assertEquals("Policy Coupon 2", secondCoupon.getName());
-        assertEquals("Test Policy", secondCoupon.getPolicyName());
-
-        // Verify repository interaction
-        verify(couponRepository, times(1)).findByCouponPolicyId(1L);
+        assertEquals(1, coupons.size());
+        assertEquals("Used Coupon", coupons.getFirst().getName());
+        assertEquals("Policy 1", coupons.getFirst().getPolicyName());
+        verify(couponRepository, times(1)).findByMemberIdAndCouponStatus(100L, CouponStatus.USED);
     }
+
+    @Test
+    void testGetUsedCouponsByMemberId_NotFound() {
+        when(couponRepository.findByMemberId(100L)).thenReturn(Collections.emptyList());
+        assertThrows(CouponsNotFoundException.class, () -> couponService.getUsedCouponsByMemberId(100L));
+    }
+
+//    @Test
+//    void testGetCouponsByPolicyId() {
+//        // Given
+//        CouponPolicy couponPolicy = new CouponPolicy(1L, "Test Policy", 1000L,
+//                10000L, BigDecimal.ZERO, 500L, 30);
+//
+//        Coupon coupon1 = new Coupon();
+//        coupon1.setTestId(1L);
+//        coupon1.setName("Policy Coupon 1");
+//        coupon1.setCouponPolicy(couponPolicy);
+//        coupon1.setCouponStatus(CouponStatus.NOTUSED);
+//
+//        Coupon coupon2 = new Coupon();
+//        coupon2.setTestId(2L);
+//        coupon2.setName("Policy Coupon 2");
+//        coupon2.setCouponPolicy(couponPolicy);
+//        coupon2.setCouponStatus(CouponStatus.USED);
+//
+//        when(couponRepository.findByCouponPolicyId(1L)).thenReturn(List.of(coupon1, coupon2));
+//
+//        // When
+//        List<CouponDetailsDTO> coupons = couponService.getCouponsByPolicyId(1L);
+//
+//        // Then
+//        assertNotNull(coupons);
+//        assertEquals(2, coupons.size());
+//
+//        // Verify first coupon
+//        CouponDetailsDTO firstCoupon = coupons.getFirst();
+//        assertEquals(1L, firstCoupon.getId());
+//        assertEquals("Policy Coupon 1", firstCoupon.getName());
+//        assertEquals("Test Policy", firstCoupon.getPolicyName());
+//
+//        // Verify second coupon
+//        CouponDetailsDTO secondCoupon = coupons.get(1);
+//        assertEquals(2L, secondCoupon.getId());
+//        assertEquals("Policy Coupon 2", secondCoupon.getName());
+//        assertEquals("Test Policy", secondCoupon.getPolicyName());
+//    }
 
 
 }
